# conan-cyrus-sasl

./: CMakeLists.txt  FindCyrusSASL.cmake  Findcyrus-sasl.cmake  conanfile.py  cyrus-sasl-2.1.26-fixes-3.patch  cyrus-sasl-2.1.26-openssl-1.1.0-1.patch  cyrus-sasl-2.1.26.patch  fix_saslint.h.patch
